--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "homepage": "https://github.com/litfa/mcserver-status-node#readme",
   "dependencies": {
     "axios": "^0.24.0",
-    "eslint": "^8.6.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "node-schedule": "^2.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.6.0"
   }
 }
