--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "express": "^4.17.2",
+    "log4js": "^6.3.0",
     "node-schedule": "^2.1.0"
   },
   "devDependencies": {
