--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.24.0",
     "express": "^4.17.2",
     "log4js": "^6.3.0",
+    "minecraft-server-util": "^5.2.9",
     "node-schedule": "^2.1.0"
   },
   "devDependencies": {
