--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.21",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
+    "cors": "^2.8.5",
     "cron": "^2.0.0",
     "eslint": "^8.16.0",
     "express": "^4.18.1",
