--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/mysql": "^2.15.21",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "cron": "^2.0.0",
     "eslint": "^8.16.0",
